fixed the issue with SVG overflowing its container. also making a foreign-object based tool tip

--- a/style.css
+++ b/style.css
@@ -9,6 +9,24 @@ body {
     color: black;
 }
 
+
+
+.float-left{
+    float: left;
+}
+
+.float-right{
+    float: right;
+}
+
+.title{
+    clear: both;
+}
+
+
+
+
+
 svg:not(:root) {
     overflow: visible;
 }
